--- a/app/src/main/res/layout/activity_showdata.xml
+++ b/app/src/main/res/layout/activity_showdata.xml
@@ -58,7 +58,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
-    <TextView
+    <TableLayout
         android:id="@+id/data_text"
         android:layout_width="0dp"
         android:layout_height="0dp"
@@ -71,6 +71,8 @@
         app:layout_constraintHorizontal_bias="0.937"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/lastUpdateTime_text"
-        app:layout_constraintVertical_bias="1.0" />
+        app:layout_constraintVertical_bias="1.0">
+    </TableLayout>
+
 
 </android.support.constraint.ConstraintLayout>
