--- a/app/src/main/res/layout/activity_showdata.xml
+++ b/app/src/main/res/layout/activity_showdata.xml
@@ -6,46 +6,6 @@
     android:layout_height="match_parent"
     tools:context="edu.nctu.runway.runway_curiosity.ShowDataActivity">
 
-    <TextView
-        android:id="@+id/latitude_text"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="16dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
-        android:text="@string/latitude_label"
-        android:textIsSelectable="true"
-        app:layout_constraintEnd_toStartOf="@+id/longitude_text"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <TextView
-        android:id="@+id/longitude_text"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="16dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
-        android:text="@string/longitude_label"
-        android:textIsSelectable="true"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toEndOf="@+id/latitude_text"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <TextView
-        android:id="@+id/lastUpdateTime_text"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="16dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
-        android:text="@string/lastUpdateTime_label"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/latitude_text" />
-
     <Button
         android:id="@+id/pathway"
         android:layout_width="wrap_content"
@@ -54,7 +14,7 @@
         android:layout_marginEnd="16dp"
         android:layout_marginRight="16dp"
         android:onClick="pathwayHandler"
-        android:text="@string/view_record"
+        android:text="@string/back"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
@@ -70,9 +30,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.937"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/lastUpdateTime_text"
-        app:layout_constraintVertical_bias="1.0">
-    </TableLayout>
+        app:layout_constraintTop_toTopOf="parent"></TableLayout>
 
 
 </android.support.constraint.ConstraintLayout>
